[gd_scene load_steps=4 format=3 uid="uid://bi14mcu1ni7nu"]

[ext_resource type="Script" path="res://scripts/menus/menu_pause.gd" id="1_euawq"]
[ext_resource type="FontFile" uid="uid://dk2tmtv4d2kef" path="res://assets/fonts/tfonts/quicksand/Quicksand-Bold.ttf" id="2_0lh7b"]
[ext_resource type="Theme" uid="uid://c78dis4b15gte" path="res://assets/themes/Menu.tres" id="3_v37kx"]

[node name="MenuPause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_euawq")

[node name="Pause_MC" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="Pause_VBox" type="VBoxContainer" parent="Pause_MC"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Pause_MC/Pause_VBox"]
layout_mode = 2
theme_override_constants/separation = -25

[node name="Header1_Label2" type="Label" parent="Pause_MC/Pause_VBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.670588, 0.72549, 1)
theme_override_fonts/font = ExtResource("2_0lh7b")
theme_override_font_sizes/font_size = 40
text = "Version 1.0 â€¢ HANGOVER SUNSHINE"
horizontal_alignment = 1

[node name="Header1_Label" type="Label" parent="Pause_MC/Pause_VBox/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0lh7b")
theme_override_font_sizes/font_size = 150
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="Header1_Label3" type="Label" parent="Pause_MC/Pause_VBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.670588, 0.72549, 1)
theme_override_fonts/font = ExtResource("2_0lh7b")
theme_override_font_sizes/font_size = 40
text = "Godot Wildjam 78 & Brackeys Game Jam 2025.1"
horizontal_alignment = 1

[node name="Button_HBox" type="HBoxContainer" parent="Pause_MC/Pause_VBox"]
layout_mode = 2
alignment = 1

[node name="Button_VBox" type="VBoxContainer" parent="Pause_MC/Pause_VBox/Button_HBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Cont_Button" type="Button" parent="Pause_MC/Pause_VBox/Button_HBox/Button_VBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("3_v37kx")
theme_override_font_sizes/font_size = 50
text = "RESUME"

[node name="Settings_Button" type="Button" parent="Pause_MC/Pause_VBox/Button_HBox/Button_VBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("3_v37kx")
theme_override_font_sizes/font_size = 50
text = "SETTINGS"

[node name="Leave_Button" type="Button" parent="Pause_MC/Pause_VBox/Button_HBox/Button_VBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("3_v37kx")
theme_override_font_sizes/font_size = 50
text = "LEAVE"

[connection signal="mouse_entered" from="Pause_MC/Pause_VBox/Button_HBox/Button_VBox/Cont_Button" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Pause_MC/Pause_VBox/Button_HBox/Button_VBox/Cont_Button" to="." method="_on_cont_button_pressed"]
[connection signal="mouse_entered" from="Pause_MC/Pause_VBox/Button_HBox/Button_VBox/Settings_Button" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Pause_MC/Pause_VBox/Button_HBox/Button_VBox/Settings_Button" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="Pause_MC/Pause_VBox/Button_HBox/Button_VBox/Leave_Button" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="Pause_MC/Pause_VBox/Button_HBox/Button_VBox/Leave_Button" to="." method="_on_leave_button_pressed"]
